# hb_2025_example

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
allure-history/: index.html
allure-history/10/: index.html
allure-history/10/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure-history/10/export/: influxDbData.txt  prometheusData.txt
allure-history/10/history/: history.json  retry-trend.json
allure-history/10/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  severity.json  summary.json
allure-history/12/: index.html
allure-history/12/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure-history/12/export/: influxDbData.txt  prometheusData.txt
allure-history/12/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
allure-history/12/widgets/: executors.json  severity.json  status-chart.json  summary.json
allure-history/13/: index.html
allure-history/14/: index.html
allure-history/3/: index.html
allure-history/4/: index.html
allure-history/5/: index.html
allure-history/6/: index.html
allure-history/9/: index.html
allure-history/last-history/: duration-trend.json
config/: urls.py
scripts/: assert_linter.py  generate_doc.py  send_allure_results.py  send_message.py
src/: coingeckp_api.py  epics.py  mark.py  report.py
tests/: conftest.py  test_happy_path.py  test_without_asserts.py
(+175 files in other folders)
