[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "allure-pytest>=2.15.0",
    "pytest>=8.4.2",
    "pytest-test-observer[allure]>=0.1.0",
    "requests>=2.32.5",
    "ruff>=0.13.1",
]

[tool.pytest.ini_options]
ch_url = "localhost:8123"
ch_table = "hb_2025_tests_result"
